# zyxelctl

./: .gitignore  LICENSE  README.md  pyproject.toml
src/zyxelctl/: __init__.py  cli.py  client.py
