[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zyxelctl"
version = "0.2.0"
description = "A small client for the Zyxel router web configurator (login + port forwards)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Okke Formsma" }]
keywords = ["zyxel", "router", "port-forward", "nat", "home-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.25",
    "cryptography>=3.4",
]

[project.urls]
Homepage = "https://github.com/okke-formsma/zyxelctl"
Issues = "https://github.com/okke-formsma/zyxelctl/issues"

[project.scripts]
zyxelctl = "zyxelctl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zyxelctl"]
